860
You now get:
```scala
<console>:5: error: type mismatch;
 found   : Null(null)
 required: T[_3.type] forSome { val _3: AnyRef{type V = T[this.type]} }
       val x : ({ type V = T[this.type] })#V = null
                                               ^
```
